# MachineLearnedInteractionPotential

./: .gitignore  README.md  pyproject.toml
configs/: experiment.yaml  mace-gpu.yaml  mace-small.yaml
docs/data/: cheng-water.md
docs/superpowers/plans/: 2026-05-18-water-mlip-metric-observable.md
docs/superpowers/specs/: 2026-05-18-water-mlip-metric-observable-design.md
docs/workflows/: first-smoke-run.md
scripts/: train_mace_gpu.sh
src/water_mlip_benchmark/: __init__.py  cli.py  config.py  convert.py  data_sources.py  mace.py  metrics.py  observables.py  plots.py  split.py
tests/: test_cli.py  test_config.py  test_convert.py  test_data_sources.py  test_mace.py  test_metrics.py  test_observables.py  test_plots.py  test_smoke_workflow.py  test_split.py  test_train_script.py
